2004-12-02  Bart Veer  <bartv@ecoscentric.com>

	* include/flash_dev.h: now provides everything needed by flash
	device drivers.

	* include/flash_priv.h: removed, subsumed by flash_dev.h
	
	* include/flash.h, src/flash.c, src/flashiodev.c,
	  src/legacy_api.c, src/legacy_dev.c:
	Replace implicit #include's of <cyg/io/flash_priv.h> with explicit
	#include's of <cyg/io/flash_dev.h>

2004-11-29  Bart Veer  <bartv@ecoscentric.com>
	
	* include/flash_priv.h, src/flash.c, src/legacy_dev.c: remove
	hwr_map_error() from V2 drivers

	* include/flash_priv.h, src/flash.c, src/legacy_dev.c: provide
	dummy init/query/lock/unlock functions for use by device drivers
	which do not support/need this functionality. Export the
	anonymizer function.

2004-11-28  Bart Veer  <bartv@ecoscentric.com>

	* src/flash.c (flash_sort_and_check): previous patch would have
	resulted in init failure if only one device initialized.
	(cyg_flash_get_info): handle per-device init flag

2004-11-25  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/flash.c (flash_sort_and_check): Don't add devices which
	failed to initialise onto the list. Don't bother sorting the
	list if its empty or only has one entry.
	* src/flash.c (find_dev): All devices on the list are initialised so
	don't both checking the init flag.

2004-11-22  Bart Veer  <bartv@ecoscentric.com>

	* src/legacy_dev.c: remove .2ram attributes. These functions do
	not manipulate the hardware, there is no need for them to live in
	ram rather than flash
	* include/flash_priv.h, src/legacy_dev.c: clean up the interface
	between the generic flash code and the device drivers
	* include/flash_priv, src/flash_legacy.h, src/flash.c,
	src/legacy_dev.c: move cache stuff andother legacy macros
	to an internal header.
	* include/flash.h, include/flash_priv.h, doc/flash.sgml,
	src/flash.c, src/legacy_dev.c: put const in the right places,
	and rename cyg_block_info to cyg_flash_block_info

2004-11-21  Bart Veer  <bartv@ecoscentric.com>
